Starting on the theming.

--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -1,5 +1,8 @@
 <div class="navbar navbar-default navbar-static-top" ng-controller="NavbarCtrl">
   <div class="container">
+    <div>
+      <img src="../../assets/images/header.png" />
+    </div>
     <div class="navbar-header">
       <button class="navbar-toggle" type="button" ng-click="isCollapsed = !isCollapsed">
         <span class="sr-only">Toggle navigation</span>
@@ -7,7 +10,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a href="/" class="navbar-brand">beatsch</a>
+      <a href="/" class="navbar-brand">beatsch1</a>
     </div>
     <div collapse="isCollapsed" class="navbar-collapse collapse" id="navbar-main">
       <ul class="nav navbar-nav">
