--- a/client/app/app.css
+++ b/client/app/app.css
@@ -59,3 +59,11 @@
 button.btn-success {
   float: right;
 }
+
+body {
+  background: no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
