--- a/client/app/app.css
+++ b/client/app/app.css
@@ -67,3 +67,9 @@ body {
   -o-background-size: cover;
   background-size: cover;
 }
+
+#my-thumbs-list{
+  overflow: auto;
+  width: 300px;
+  height: 240px;
+}
