--- a/client/app/main/main.css
+++ b/client/app/main/main.css
@@ -28,3 +28,23 @@
     margin-top: 70px;
     border-top: 1px solid #E5E5E5;
 }
+
+body {
+  background: no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
+#my-thumbs-list{
+  overflow: auto;
+  width: 300px;
+  height: 240px;
+}
+
+.beatschBlock {
+  background-color: black;
+  filter:alpha(opacity=70);
+  opacity:.8;
+}
