Added header and made more css changes.

--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -1,4 +1,4 @@
-<div class="navbar navbar-default navbar-static-top" ng-controller="NavbarCtrl">
+<div class="navbar navbar-default navbar-static-top" id="beatschNavBar" ng-controller="NavbarCtrl">
   <div class="container">
     <div>
       <img src="../../assets/images/header.png" />
@@ -10,7 +10,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a href="/" class="navbar-brand">beatsch1</a>
+      <!--<a href="/" class="navbar-brand">beatsch1</a>-->
     </div>
     <div collapse="isCollapsed" class="navbar-collapse collapse" id="navbar-main">
       <ul class="nav navbar-nav">
