Added current playing song to navbar, removed it from the main page.

--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -2,6 +2,7 @@
   <div class="container">
     <div>
       <img src="../../assets/images/header.png" />
+      {{ currentSong._song.title }}
     </div>
     <div class="navbar-header">
       <button class="navbar-toggle" type="button" ng-click="isCollapsed = !isCollapsed">
