--- a/client/app/main/main.css
+++ b/client/app/main/main.css
@@ -2,6 +2,11 @@
   margin: 20px 0;
 }
 
+@font-face {
+  font-family: baronBold;
+  src: url('../../assets/fonts/baronNeueBold.otf');
+}
+
 #banner {
   border-bottom: none;
   margin-top: -20px;
@@ -99,6 +104,7 @@ body {
 
 h1 {
   color: white;
+  font-family: baronBold;
 }
 
 #beatschNavBar {
@@ -108,5 +114,14 @@ h1 {
 }
 
 #beatschHeader {
+  color: white;
+}
+
+#beatschTimer {
+  color: white;
+  float: right;
+}
+
+#navbar-nav {
   color: white;
 }
