--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -1,7 +1,7 @@
 <div class="navbar navbar-default navbar-static-top" id="beatschNavBar" ng-controller="NavbarCtrl">
   <div class="container">
     <div id="beatschHeader">
-      <img src="../../assets/images/header.png" />
+      <a href="/"><img src="../../assets/images/header.png" /></a>
       Now Playing: <b>{{ currentSong._song.title }}</b>
     </div>
     <div class="navbar-header">
