--- a/client/app/main/main.css
+++ b/client/app/main/main.css
@@ -65,8 +65,8 @@ body {
 
 .beatschBlock {
   background-color: black;
-  filter:alpha(opacity=70);
-  opacity:.7;
+  filter:alpha(opacity=90);
+  opacity:.9;
 }
 
 .beatschChatBlock {
@@ -82,7 +82,11 @@ body {
 }
 
 #videoPlayer {
-
+  /*
+  background-color: black;
+  filter:alpha(opacity=100);
+  opacity:1.0;
+  */
 }
 
 #thumbList {
@@ -140,8 +144,8 @@ h1 {
 
 #beatschNavBar {
   background-color: black;
-  filter:alpha(opacity=70);
-  opacity:.7;
+  filter:alpha(opacity=90);
+  opacity:.9;
 }
 
 #beatschHeader {
