--- a/client/app/main/main.css
+++ b/client/app/main/main.css
@@ -113,6 +113,13 @@ body {
   padding-bottom: 10px;
 }
 
+.beatschCurrentPlayLogItem {
+  padding-top: 10px;
+  padding-bottom: 10px;
+  color: #ffc520;
+  font-size: 16px;
+}
+
 #playList {
 
 }
