--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div id="beatschHeader">
       <a href="/"><img src="../../assets/images/header.png" /></a>
-      Now Playing: <b>{{ currentSong._song.title }}</b>
+      <span id="beatschNowPlaying">Now Playing: <b>{{ currentSong._song.title.substring(0,50) }}</b></span>
     </div>
     <div class="navbar-header">
       <button class="navbar-toggle" type="button" ng-click="isCollapsed = !isCollapsed">
