--- a/client/app/main/main.css
+++ b/client/app/main/main.css
@@ -28,3 +28,57 @@
     margin-top: 70px;
     border-top: 1px solid #E5E5E5;
 }
+
+.person-move {
+  position: relative;
+  top: 26px;
+}
+
+.person-move.person-move-active {
+  transition: all 0.5s ease;
+  top: 0;
+}
+
+.person-move + div {
+  /* cannot have transition on this element */
+  /*transition: all 1s ease;*/
+  position: relative;
+  top: -26px;
+}
+
+.person-move.person-move-active + div {
+  transition: all 0.5s ease;
+  position: relative;
+  top: 0;
+}
+
+.person-enter {
+  position: relative;
+  opacity: 0.0;
+  height: 0;
+  left: 100px;
+}
+
+.person-enter.person-enter-active {
+  transition: all 0.5s ease;
+  opacity: 1.0;
+  left: 0;
+  height: 26px;
+}
+
+
+.person-leave {
+  position: relative;
+  opacity: 1.0;
+  left: 0;
+  height: 26px;
+  z-index: -100;
+}
+
+.person-leave.person-leave-active {
+  transition: all 0.5s ease;
+  opacity: 0.0;
+  left: 100px;
+  height: 0;
+  top: -13px;
+}
