More CSS changes

--- a/client/app/main/main.css
+++ b/client/app/main/main.css
@@ -111,3 +111,14 @@
   }
 }
 
+.playList {
+  background-color: white;
+  -moz-border-radius: 50px;
+  border-radius: 50px;
+  padding: 10px;
+  margin: 10px;
+}
+
+#mainContainer {
+  background-color: darkorange;
+}
