--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -4,17 +4,39 @@ $icon-font-path: '../fonts/';
 @import "bower_components/bootstrap-sass/assets/stylesheets/_bootstrap.scss";
 // endbower
 
-.CodeMirror {
-  height: 800px
+html {
+  height: 100%;
+  width: 100%;
 }
 
-//#guiContainer {
-//  height: 800px
-//}
+.CodeMirror {
+  height: auto;
+}
+
+#mainContainer {
+  height: 100%;
+  min-height: 100%;
+  width: 100%;
+  padding-left: 0px;
+  padding-right: 0px;
+}
+
+#editorContainer {
+  height: 100%;
+  min-height: 100%;
+  width: 100%;
+  //padding-left: 0px;
+  //padding-right: 0px;
+}
 
 #guiEditor {
-  height: 800px;
-  width: 600px;
+  height: 100%;
+  //width: 600px;
+}
+
+#sourceEditor {
+  height: 100%;
+  //width: 600px;
 }
 
 .browserupgrade {
@@ -24,11 +46,28 @@ $icon-font-path: '../fonts/';
   padding: 0.2em 0;
 }
 
-/* Space out content a bit */
-body {
-  padding-top: 20px;
-  padding-bottom: 20px;
+.navbar {
+  margin-bottom: 0px;
+  width: 100%;
 }
+
+.col-md-6 {
+  padding-left: 0px;
+  padding-right: 0px;
+  height: 100%;
+}
+
+.row {
+  height: 100%;
+  min-height: 100%;
+  width: 100%;
+}
+
+/* Space out content a bit */
+//body {
+  //padding-top: 20px;
+  //padding-bottom: 20px;
+//}
 
 /* Everything but the jumbotron gets side spacing for mobile first views */
 .header,
