Both editors now redraw on resizes.

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -29,6 +29,11 @@ html {
   //padding-right: 0px;
 }
 
+//.vsplitbar {
+//  width: 5px;
+ // background: #aaa;
+//}
+
 #guiEditor {
   height: 100%;
   //width: 600px;
