--- a/app/pixi/style.css
+++ b/app/pixi/style.css
@@ -1,3 +1,19 @@
-* { margin:0; padding:0; }
-html, body { width:100%; height:100%; }
-canvas { display:block; }
+* {
+  margin:0;
+  padding:0;
+}
+
+html, body {
+  width:100%;
+  height:100%;
+}
+
+canvas {
+  display:block;
+}
+
+#overlayMenu {
+  position: absolute;
+  left: 20%;
+  top: 10%;
+}
