--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -7,6 +7,7 @@ $icon-font-path: '../fonts/';
 html {
   height: 100%;
   width: 100%;
+  overflow: hidden;
 }
 
 .CodeMirror {
@@ -39,106 +40,13 @@ html {
   width: 100%;
 }
 
-#cloudGrid {
-  //width:20em;
-  //height:20em;
-  margin:0 auto;
-  position:relative;
-  box-shadow:.25em .25em 1em rgba(0,0,0,.2);
-  transform:rotatex(60deg) rotateZ(45deg) translateZ(-1em);
-  transform-style: preserve-3d;
-}
-
-#cloudGrid .item {
-  width:10em;
-  height:10em;
-  background:grey;
-  float: left;
-}
-
 #sourceEditor {
   height: 100%;
   //width: 600px;
 }
 
-.browserupgrade {
-  margin: 0.2em 0;
-  background: #ccc;
-  color: #000;
-  padding: 0.2em 0;
-}
-
-.navbar {
-  margin-bottom: 0px;
-  width: 100%;
-}
-
-.col-md-6 {
-  padding-left: 0px;
-  padding-right: 0px;
-  height: 100%;
-}
-
-.row {
-  height: 100%;
-  min-height: 100%;
-  width: 100%;
-}
-
-/* Space out content a bit */
-//body {
-  //padding-top: 20px;
-  //padding-bottom: 20px;
-//}
-
-/* Everything but the jumbotron gets side spacing for mobile first views */
-.header,
-.marketing,
-.footer {
-  padding-left: 15px;
-  padding-right: 15px;
-}
-
-/* Custom page header */
-.header {
-  border-bottom: 1px solid #e5e5e5;
-
-  /* Make the masthead heading the same height as the navigation */
-  h3 {
-    margin-top: 0;
-    margin-bottom: 0;
-    line-height: 40px;
-    padding-bottom: 19px;
-  }
-}
-
-/* Custom page footer */
-.footer {
-  padding-top: 19px;
-  color: #777;
-  border-top: 1px solid #e5e5e5;
-}
-
-.container-narrow > hr {
-  margin: 30px 0;
-}
-
-/* Responsive: Portrait tablets and up */
-@media screen and (min-width: 768px) {
-  .container {
-    max-width: 1200px;
-  }
-
-  /* Remove the padding we set earlier */
-  .header,
-  .footer {
-    padding-left: 0;
-    padding-right: 0;
-  }
-
-  /* Space out the masthead */
-  .header {
-    margin-bottom: 30px;
-  }
-
+#showLeft {
+  position: absolute;
+  top: 5%;
+  left: 90%;
 }
